--- a/meltano.yml
+++ b/meltano.yml
@@ -1,3 +1,10 @@
 version: 1
 send_anonymous_usage_stats: true
 project_id: 8c8b0032-81d7-40d2-bab6-f688d11b6cfa
+plugins:
+  extractors:
+  - name: tap-spreadsheets-anywhere
+    pip_url: git+https://github.com/ets/tap-spreadsheets-anywhere.git
+  files:
+  - name: dbt
+    pip_url: git+https://gitlab.com/meltano/files-dbt.git@config-version-2
